# HW_WEB13

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  e_mail.py
templates/: example_email.html
