[tool.poetry]
name = "fastmail-hw13"
version = "0.1.0"
description = ""
authors = ["Denko <officedenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-mail = "^1.4.1"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
